# Scrapper_NLP

./: .gitignore  README.md  album.html  base_statics.py  clear.py  discografia.html  letra.html  nuvem.py  pyproject.toml  scrapper.py  visual.py
