[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.3",
    "parsel>=1.10.0",
    "polars>=1.29.0",
    "pyqt6>=6.9.0",
    "stanza>=1.10.1",
]
